--- a/SlavaQuest/Properties/launchSettings.json
+++ b/SlavaQuest/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "num",
+      "launchUrl": "tenants/get/all",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "SlavaQuest": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "num",
+      "launchUrl": "tenants/get/all",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
